--- a/index.html
+++ b/index.html
@@ -15,6 +15,219 @@ $.get( "http://pokeapi.co/api/v1/pokemon/?limit=12", function( data ) {
 
 </script>
 
+<div id="rectangle1"></div>
+<div id="rectangle2"></div>
+<div id="rectangle3"></div>
+<br/>
+<div id="rectangle4"></div>
+<div id="rectangle5"></div>
+<div id="rectangle6"></div>
+<br/>
+<div id="rectangle7"></div>
+<div id="rectangle8"></div>
+<div id="rectangle9"></div>
+<br/>
+<div id="rectangle10"></div>
+<div id="rectangle11"></div>
+<div id="rectangle12"></div>
+<br/>
+<div id="rectangle13"></div>
+<div id="rectangle14"></div>
+<div id="rectangle15"></div>
+<br/>
+<div id="rectangle16"></div>
+<div id="rectangle17"></div>
+<div id="rectangle18"></div>
+
+<div>
+<style>
+#rectangle1 {
+  padding: 30px;
+  border: 1px solid #73FFC9;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+  background-color:#F5FFFF;
+  box-shadow: 2px 2px 2px #888888;
+
+}
+#rectangle2 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle3 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle4 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle5 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle6 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle7 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle8 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle9 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width:90px;
+  border-radius: 12px;
+}
+#rectangle10 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle11 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle12 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle13 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle14 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width:90px;
+  border-radius: 12px;
+}
+#rectangle15 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle16 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle17 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+#rectangle18 {
+  padding: 30px;
+  border: 2px solid black;
+  display: inline-block;
+  margin: 10px;
+  height:150px;
+  width: 90px;
+  border-radius: 12px;
+}
+
+
+</style>
+</div>
+
+<div id="rectangle19"></div>
+<div>
+<style>
+#rectangle19 {
+    border: 1px solid #73FFC9;
+    position:fixed;
+    width:200px;
+    height:300px;
+    background-color:#F5FFFF;
+    right:10px;
+    top:100px;
+    border-radius: 12px;
+    box-shadow: 2px 2px 2px #888888;
+}
+</style>
+</div>
+
 </head>
 <body>
 <h1>Hello World!</h1>
