--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<title></title>
+	<title>Pokemon</title>
 
 <script type="text/javascript">
 $( document ).ready(function() {
@@ -28,7 +28,13 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
 .hidden-info{
 	display: none;
 }
- #rectangle1 {
+ #rectangle1,#rectangle2,#rectangle3,
+ #rectangle4,#rectangle5,#rectangle6,
+ #rectangle7,#rectangle8,#rectangle9,
+ #rectangle10,#rectangle11,#rectangle12,
+ #rectangle13,#rectangle14,#rectangle15,
+ #rectangle16,#rectangle17,#rectangle18
+  {
   padding: 30px;
   border: 1px solid #73FFC9;
   display: inline-block;
@@ -40,263 +46,218 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
   box-shadow: 2px 2px 2px #888888;
 
 }
-#rectangle2 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle3 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle4 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle5 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle6 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle7 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle8 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle9 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width:90px;
-  border-radius: 12px;
-}
-#rectangle10 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle11 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle12 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle13 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle14 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width:90px;
-  border-radius: 12px;
-}
-#rectangle15 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle16 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle17 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
-#rectangle18 {
-  padding: 30px;
-  border: 2px solid black;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 90px;
-  border-radius: 12px;
-}
+
 
 #rectangle19 {
     border: 1px solid #73FFC9;
     position:fixed;
-    width:200px;
-    height:300px;
+    width:220px;
+    height:340px;
     background-color:#F5FFFF;
-    right:10px;
-    top:100px;
+    right:110px;
+    top:195px;
     border-radius: 12px;
     box-shadow: 2px 2px 2px #888888;
 }
+
+.div10{
+    background:yellow;
+    width:100%;
+    height:100%;
+    text-align:center;
+}
+.div100{    
+    width: 50%;
+    min-height: 150px;
+    background: #ccc;
+    float: left;
+}
+.div200{    
+    width: 50%;
+    min-height: 150px;
+    background: #ccc;
+    float: left;
+}
+
 </style>
 
 
 </head>
 <body>
+<div class="div10">
+<div id="Pokedex">
+   <h1>Pokedex</h1> 
+   <div align="center" style="width:auto; height:auto; position:relative; float:none;">
+   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/English_Pok%C3%A9mon_logo.svg/2000px-English_Pok%C3%A9mon_logo.svg.png" alt="изображение" width="250" height="100">
+   </div>
+</div>
+
+
+</div>
+
+<div class="div100">
 
 <div id="rectangle1" class="pokemon">
+<img src="http://pokeapi.co/media/img/1.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
 
 <div id="rectangle2" class="pokemon">
+<img src="http://pokeapi.co/media/img/2.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
 
 <div id="rectangle3" class="pokemon">
+<img src="http://pokeapi.co/media/img/3.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
 <br/>
 
 <div id="rectangle4" class="pokemon">
+<img src="http://pokeapi.co/media/img/4.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
 
 <div id="rectangle5" class="pokemon">
+<img src="http://pokeapi.co/media/img/5.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
+
 <div id="rectangle6" class="pokemon">
+<img src="http://pokeapi.co/media/img/6.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
 
 <br/>
 <div id="rectangle7" class="pokemon">
+<img src="http://pokeapi.co/media/img/7.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
+
 <div id="rectangle8" class="pokemon">
+<img src="http://pokeapi.co/media/img/8.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
+
 <div id="rectangle9" class="pokemon">
+<img src="http://pokeapi.co/media/img/9.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
 
 <br/>
 <div id="rectangle10" class="pokemon">
+<img src="http://pokeapi.co/media/img/10.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
-<div id="rectangle11" class="pokemon">
-<div class="name"></div>
-<div class="hidden-info"></div>
-</div>
-<div id="rectangle12" class="pokemon">
-<div class="name"></div>
-<div class="hidden-info"></div>
-</div>
-<br/>
 
-<div id="rectangle13" class="pokemon">
+<div id="rectangle11" class="pokemon">
+<img src="http://pokeapi.co/media/img/11.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
+
+<div id="rectangle12" class="pokemon">
+<img src="http://pokeapi.co/media/img/12.png">
+<div class="name"></div>
+<div class="hidden-info"></div>
+</div>
+
+<br/>
+<div id="rectangle13" class="pokemon">
+<img src="http://pokeapi.co/media/img/13.png">
+<div class="name"></div>
+<div class="hidden-info"></div>
+</div>
+
 <div id="rectangle14" class="pokemon">
+<img src="http://pokeapi.co/media/img/14.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
 <div id="rectangle15" class="pokemon">
+<img src="http://pokeapi.co/media/img/15.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
 
 <br/>
 <div id="rectangle16" class="pokemon">
-<div class="name"></div>
-<div class="hidden-info"></div>
-</div>
-<div id="rectangle17" class="pokemon">
-<div class="name"></div>
-<div class="hidden-info"></div>
-</div>
-<div id="rectangle18" class="pokemon">
+<img src="http://pokeapi.co/media/img/16.png">
 <div class="name"></div>
 <div class="hidden-info"></div>
 </div>
 
-<div id="rectangle19"></div>
+<div id="rectangle17" class="pokemon">
+<img src="http://pokeapi.co/media/img/17.png">
+<div class="name"></div>
+<div class="hidden-info"></div>
+</div>
+
+<div id="rectangle18" class="pokemon">
+<img src="http://pokeapi.co/media/img/18.png">
+<div class="name"></div>
+<div class="hidden-info"></div>
+</div>
+
+</div>
+
+<div class="div200">
+
+    <div id="rectangle19" class="pokemon"> 
+    <img src="http://pokeapi.co/media/img/19.png">
+
+<table border="1" style="width:100%">
+  <tr>
+    <td>Type</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Attack</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Defense</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>HP</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>SP Attack</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>SP Defense</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Speed</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Weight</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Total moves</td>
+    <td>rrrrrrrrr</td>
+  </tr>
+  </table>
+    </div>
+</div>
+
+
+
 </body>
 </html>
