--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
   display: inline-block;
   margin: 10px;
   height:150px;
-  width: 90px;
+  width: 100px;
   border-radius: 12px;
   background-color:#FFC628;
   box-shadow: 2px 2px 2px #888888;
@@ -138,18 +138,30 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
 <img src="http://pokeapi.co/media/img/1.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle2" class="pokemon">
 <img src="http://pokeapi.co/media/img/2.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle3" class="pokemon">
 <img src="http://pokeapi.co/media/img/3.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 <br/>
 
@@ -157,18 +169,30 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
 <img src="http://pokeapi.co/media/img/4.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle5" class="pokemon">
 <img src="http://pokeapi.co/media/img/5.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle6" class="pokemon">
 <img src="http://pokeapi.co/media/img/6.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <br/>
@@ -176,18 +200,30 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
 <img src="http://pokeapi.co/media/img/7.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle8" class="pokemon">
 <img src="http://pokeapi.co/media/img/8.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle9" class="pokemon">
 <img src="http://pokeapi.co/media/img/9.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="LoadMore"><a href="javascript: displ('var')">LOAD MORE</a></div>
@@ -198,18 +234,30 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
 <img src="http://pokeapi.co/media/img/10.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle11" class="pokemon">
 <img src="http://pokeapi.co/media/img/11.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle12" class="pokemon">
 <img src="http://pokeapi.co/media/img/12.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <br/>
@@ -217,17 +265,30 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
 <img src="http://pokeapi.co/media/img/13.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle14" class="pokemon">
 <img src="http://pokeapi.co/media/img/14.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
+
 </div>
 <div id="rectangle15" class="pokemon">
 <img src="http://pokeapi.co/media/img/15.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <br/>
@@ -235,18 +296,30 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
 <img src="http://pokeapi.co/media/img/16.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle17" class="pokemon">
 <img src="http://pokeapi.co/media/img/17.png" width="100" height="100">
 <div class="name" align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 
 <div id="rectangle18" class="pokemon">
 <img src="http://pokeapi.co/media/img/18.png" width="100" height="100">
 <div class="name"align="center" style="width:auto; height:auto; position:relative; float:none;"></div>
 <div class="hidden-info"></div>
+<div>
+    <input type="Grass" value="Grass" style="width:40px; height:20px" align="left";>
+    <input type="Poison" value="Poison" style="width:40px; height:20px" align="right";>
+</div>
 </div>
 <div id="LoadMore2"><a href="javascript: displ('var')">CLOSE</a></div>
 
