--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@ $( document ).ready(function() {
     $(".pokemon").click(function(event){
   $("#rectangle19").html($(event.target).children(".hidden-info").html());
 })
-    var statistikRow = function(value, label) {
+    //ADDED
+    
+    //ADDED
+
+    var statisticRow = function(value, label) {
     resalt = '<tr><td>'+label+'</td><td>'+value+'</td></tr>'
     return resalt; 
     }
 
+//ADDED
+//ADDED
 
 
 var content = '<img src="http://pokeapi.co/media/img/19.png">\
@@ -25,19 +31,20 @@ var tableEnd = '</table>'
 for(var i=1; i<19; i++){
 $.get( "http://pokeapi.co/api/v2/pokemon/"+i, function( data ) {
   //$.each(data.objects,function(key,val){
-    $( "#rectangle"+data.id+" .name" ).html( data.name );
+    $( "#rectangle"+data.id+" .name");
     console.log(data); 
     console.log("#rectangle"+data.id+" .name");
   //});
+  //});
 
   var profileImage = '<img src="http://pokeapi.co/media/img/'+data.id+'.png"><div>'
-  var profileTable = table + statistikRow('25', 'Type') + statistikRow('200', 'Attack') + statistikRow('200', 'Defense') + statistikRow('200', 'HP') + statistikRow('200', 'SP Attack') + statistikRow('200', 'SP Defense') + statistikRow('200', 'Speed') + statistikRow('200', 'Weight') + statistikRow('200', 'Total moves') + tableEnd
+  var profileTable = table + statisticRow('Type', data.types[0]) + statisticRow('Attack', data.attack) + statisticRow('Defense', data.defense) + statisticRow('HP', data.hp) + statisticRow('SP Attack', data['special-attack']) + statisticRow('SP Defense', data['special-defense']) + statisticRow('Speed', data.speed) + statisticRow('Weight', data.weight) + statisticRow('Total moves', data.totalMoves) + tableEnd
 
+  
   $( "#rectangle"+data.id+" .hidden-info" ).html( profileImage+data.name+"#"+data.id+profileTable ); 
 });
 }
 });
-
 
 </script>
 
